--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,25 @@
 h1 {
     font-family: 'Press Start 2P', cursive;
 }
+
+#gameboard {
+    position: absolute;
+    width: 550px;
+    height: 450px;
+    background-color: darkolivegreen;
+    }
+
+#bat {
+    position: absolute;
+    top: 420px;
+    width: 80px;
+    height: 20px;
+    background-color: red;}
+
+#ball {
+    position: absolute;
+    width: 48px;
+    height: 48px;
+    border-radius: 24px;
+    background-color: yellow;
+}
